2022-11-09T01:59:43Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3424721684 # 211
* notice: last 14d: unq all: 4 20
* notice: prev accum: outdated-unq outdated-all / unq all: 76 221 / 87 242
* notice: next accum: outdated-unq outdated-all / unq all: 76 221 / 87 241
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-10-26]

2022-11-08T16:32:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3421332166 # 210
* notice: last 14d: unq all: 4 21
* notice: prev accum: outdated-unq outdated-all / unq all: 75 219 / 87 241
* notice: next accum: outdated-unq outdated-all / unq all: 76 221 / 87 242
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-25] / []

2022-11-08T08:28:56Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3417647645 # 209
* notice: last 14d: unq all: 4 22
* notice: prev accum: outdated-unq outdated-all / unq all: 75 219 / 87 242
* notice: next accum: outdated-unq outdated-all / unq all: 75 219 / 87 241
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-10-25]

2022-11-07T16:28:07Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3412156772 # 207
* notice: last 14d: unq all: 4 23
* notice: prev accum: outdated-unq outdated-all / unq all: 74 217 / 87 241
* notice: next accum: outdated-unq outdated-all / unq all: 75 219 / 87 242
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-24] / []

2022-11-07T08:28:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3408700406 # 206