@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-09T01:59:43Z",
-  "count_outdated" : 221,
-  "uniques_outdated" : 76,
-  "count" : 241,
+  "timestamp" : "2022-11-09T16:28:41Z",
+  "count_outdated" : 223,
+  "uniques_outdated" : 77,
+  "count" : 242,
   "uniques" : 87,
   "clones" : [
-    {
-      "timestamp": "2022-10-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-27T00:00:00Z",
       "count": 2,
