@@ -1,3 +1,11 @@
+2022-11-09T16:28:41Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3429958194 # 213
+* notice: last 14d: unq all: 4 19
+* notice: prev accum: outdated-unq outdated-all / unq all: 76 221 / 87 241
+* notice: next accum: outdated-unq outdated-all / unq all: 77 223 / 87 242
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-10-26] / []
+
 2022-11-09T01:59:43Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3424721684 # 211
 * notice: last 14d: unq all: 4 20
